<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.playboard.PlayBoardFragment">

    <data>
        <variable
            name="viewModel"
            type="com.example.sukodu.ui.playboard.PlayBoardViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/space_regular">

        <GridView
            android:id="@+id/board"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_regular"
            android:background="@drawable/playboard_border"
            android:padding="@dimen/border_regular"
            app:layout_constraintTop_toTopOf="parent" />

        <GridView
            android:id="@+id/numbers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/board"
            android:layout_marginTop="@dimen/space_big"
            android:horizontalSpacing="@dimen/space_small"/>

        <Button
            android:id="@+id/clear_cell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear_cell"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/numbers"
            android:layout_marginTop="@dimen/space_small"
            android:onClick="@{() -> viewModel.clearCurrentSelectedValue()}"/>

        <Button
            android:id="@+id/reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/clear_cell"
            android:layout_marginStart="@dimen/space_regular"
            app:layout_constraintTop_toTopOf="@id/clear_cell"
            android:text="@string/reset"
            android:onClick="@{() -> viewModel.resetBoard()}"/>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/live_validation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/clear_cell"
            android:layout_marginTop="@dimen/space_small"
            android:text="@string/live_validation"
            android:textSize="@dimen/text_small" />

        <Button
            android:id="@+id/check_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_result"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/live_validation"
            android:layout_marginTop="@dimen/space_small"
            android:onClick="@{() -> viewModel.checkResult()}"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
